A new draft is near

--- a/04-discussion.Rmd
+++ b/04-discussion.Rmd
@@ -1,46 +1,34 @@
 # DISCUSSION
 
-The SDMs developed here incorporate environmental, spatial, and multi-scale temporal information to partition dynamic changes which occur both inter and intra-annually from static environmental relationships. This framework enables a more in depth understanding of the impact of temporal shifts in species distributions than simpler aggregation based indices that are often used to indicate temporal shifts in a stocks distribution [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015 and see Supplemental Figure \@ref(fig:gini-index) showing the Gini index timeseries for Yellowtail Flounder and Atlantic Cod on Georges Bank for each survey]. A general shift in the distributions of both species towards the east and north was identified, in both cases this shift was in large part due to the loss of high OP areas in the southern and western portion of GB (primarily in US waters). In addition, the analysis of surveys from different times of the year provided a snapshot of the seasonal changes in the distributions of the species; the Yellowtail Flounder distribution was relatively stable throughout the year, while Atlantic Cod  moved towards the slope of GB during the fall. Finally, the models were able to predict the location of Atlantic Cod  and Yellowtail Flounder during spawning up to 3 years in the future with only a modest loss of predictive ability. The SDMs developed here can be used to identify regions of consistently high and low probability of occurrence, quantify changes in the size of a *core area* over time and between seasons (surveys), quantify how rapidly shifts in their distributions occur, and provide short term forecasts of the spatial OP patterns in future years.
+The SDMs developed here incorporate environmental, spatial, and multi-scale temporal information to partition dynamic changes which occur both inter and intra-annually from static environmental relationships. This framework enables a more in depth understanding of the impact of temporal shifts in species distributions than simpler aggregation based indices that are often used in fisheries science to indicate temporal shifts in a stocks distribution [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015 and see Supplemental Figure \@ref(fig:gini-index) showing the Gini index timeseries for Yellowtail Flounder and Atlantic Cod on Georges Bank for each survey]. A general shift in the distributions of both species towards the east and north was identified, in both cases this shift was in large part due to the loss of high OP areas in the southern and western portion of GB (primarily in US waters). In addition, the analysis of surveys from different times of the year provided a snapshot of the seasonal changes in the distributions of the species; the Yellowtail Flounder distribution was relatively stable throughout the year, while Atlantic Cod moved towards the northeastern slope of GB during the fall. Finally, the models were able to predict the location of Atlantic Cod and Yellowtail Flounder during spawning up to 3 years in the future with only a modest loss of predictive ability. The SDMs developed here can be used to identify regions of consistently high and low probability of occurrence, quantify changes in the size of a *core area* over time and between seasons (surveys), quantify how rapidly shifts in their distributions occur, and provide short term forecasts of the spatial OP patterns in future years.
 
-### Cod
+The core area for Atlantic Cod collapsed rapidly in the early 1990s in unison with the collapse of Atlantic Cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since the collapse, the size of the core area has remained relatively consistent but has continued to slowly shift to the northeast with this shift more pronounced in the Fall. The loss of high EP areas from the warmer southern and western reaches of the bank have primarily been the reason for the apparent shift in the distribution of cod into Canadian waters. In more recent years, the Fall distribution of Atlantic Cod was likely located on the northeastern slope of the bank and outside of the core survey domains of these surveys.
 
-The core area for Atlantic Cod collapsed rapidly in the early 1990s in unison with the collapse of Atlantic Cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since the collapse, the size of the core area has remained relatively consistent but has continued to slowly shift to the northeast with this shift more pronounced in the Fall. The Fall distribution of Atlantic Cod is likely now located on the northeastern slope of the bank outside of the core survey domains of any of these surveys. This northeastern shift of the stock over the course of this study suggests that the surveys may no longer be sampling the entirety of this stock throughout the course of the year (i.e. a higher proportion of the stock may now be located outside of the survey domain in the Fall than in the past). Each of the survey indices had been used as inputs to the Atlantic Cod stock assessment model for eastern GB Atlantic Cod [@andrushchenkoAssessmentEasternGeorges2018]. However, this assessment model suffered from such significant retrospective patterns that the model was recently rejected; the results of this study are in agreement with the suggestion that the observed shift in the distribution of Atlantic Cod outside of the survey domain was a contributing factor to the model retrospective problems [@andrushchenkoAssessmentEasternGeorges2018]. In addition, because the management of this stock is shared between Canada and the U.S., the observed shift in the core distribution to Canadian waters suggests that shared management policies, such as quota sharing agreements between the two jurisdictions, may require regular review [e.g. @tmgcDevelopmentSharingAllocation2002].
+This apparent northeastern shift of the stock over the course of this study suggests that the surveys may no longer be sampling the entirety of Atlantic Cod throughout the course of the year (i.e. a higher proportion of the stock may now be located outside of the survey domain in the Fall than in the past). Each of the survey indices had been used as inputs to the Atlantic Cod stock assessment model for eastern GB Atlantic Cod [@andrushchenkoAssessmentEasternGeorges2018]. However, this assessment model suffered from such significant retrospective patterns that the model was recently rejected; the results of this study are in agreement with the suggestion that the observed shift in the distribution of Atlantic Cod outside of the survey domain was a contributing factor to the model retrospective problems [@andrushchenkoAssessmentEasternGeorges2018]. In addition, because the management of this stock is shared between Canada and the U.S., the observed shift in the core distribution to Canadian waters suggests that shared management policies, such as quota sharing agreements between the two jurisdictions, may require regular review [e.g. @tmgcDevelopmentSharingAllocation2002]. <!--
+The static SST layer and depth were the most influential covariates and indicated that cod preferred the colder portions of the bank throughout the year at depths between XX and XX meters. 
+--->
+
+Yellowtail Flounder were more likely to be found on bottom types which included sand, in regions of the bank that historically had lower temperatures, and at depths between `r yt.dep.peak` meters; this is consistent with the known life history for this species [@johnsonYellowtailFlounderLimanda1999]. In addition, there was a consistent elevated likelihood of encountering Yellowtail Flounder in the region straddling the ICJ line which was not explained by the environmental covariates. This suggests this region has some unexplained ecological or environmental significance to Yellowtail Flounder. The shift in the distribution of Yellowtail Flounder away from more southern and western parts of GB combined with the declines in biomass of Yellowtail Flounder throughout the U.S. supports the view that environmental change has been a factor in the recent decline of Yellowtail Flounder both on GB and throughout the region [@legaultStockAssessmentGeorges2018; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015]. Given the loss of Yellowtail Flounder from the warmer portions of the bank observed in this study it is possible that the remaining core area straddling the ICJ line represents the most northern suitable habitat on GB for this species. If temperatures continue to increase, as projected with climate change, the suitability of this habitat may decline, increasing the risk of extirpation of Yellowtail Flounder from GB irrespective of any fisheries management action [@allynComparingSynthesizingQuantitative2020].
 
 <!-- The high EP area for cod collapsed rapidly in the early 1990's in unison with the collapse of cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since the collapse the core area has remained relatively consistent but has continued to slowly shift to the north and east, though the shift is more pronounced in the fall. The fall distribution of cod is likely now located on the northeastern slope of the bank outside of the core Georges Bank survey domain. This northeastern shift of the population over the course of this study suggests that this population is found outside the Georges Bank survey domain throughout the course of the year (i.e. a higher proportion of the stock is now located outside of this area). Each of the survey indices area used as inputs to the cod stock assessment model for eastern GB cod [@andrushchenkoAssessmentEasternGeorges2018]. This assessment model suffered from such significant retrospective patterns that this stock assessment model was eventually rejected; it is possible that the observed shift in the distribution of cod outside of the survey domain was a contributing factor to the model retrospective problems which was not accounted for in the model [@andrushchenkoAssessmentEasternGeorges2018]. In addition, because the management of this stock is shared between Canada and the U.S., the observed shift in the core distribution to Canadian waters suggests that shared management policies, such as quota sharing agreements between the two jurisdictions, may require regular review [e.g. @tmgcDevelopmentSharingAllocation2002]. -->
 
 <!-- In the U.S. portion of GB closures were put in place in 1994 to assist with the rebuilding of stocks in the region, these closures have been considered as instrumental in the rebuilding of several stocks in the late 1990s [@linkEffectsAreaClosures2005; @murawskiLargescaleClosedAreas2000]. On the Canadian side of GB the primary source of fishery mortality for these species comes from bycatch in the Canadian groundfish and offshore scallop fisheries. In an effort to protect spawning aggregations on Georges Bank from bycatch the Canadian groundfish fishery is excluded from GB from early February until the end of May while the COSF is excluded from fishing inside smaller time-area closures in February, March and June. The temporal shifts in the distribution of these stocks will result in changes in the efficacy of these closed areas over time in terms of protection of the species they were originally designed to protect. In general, the shifts in both stocks to the northeast suggests that closures towards the west of Georges Bank will be less effective in protecting these two stocks than they were when the closures were first implemented while closures towards the north-east portion of Georges Bank may have more influence on these stocks then they did in the past. Additionally, recent work has found little evidence for an effect of the smaller time-area closures in reducing bycatch from the Canadian Offshore Scallop Fishery (CITE PLOS-One). Spatio-temporal models such as these enables the development of metrics which can quantify the overlap between closed areas and the species they are designed to protect, which can lead to insights into the effectiveness of these closures and how the overlap has changes over time and throughout the year (CITE SOMEONE??). -->
 
-### Yellowtail
+### Environmental Covariates and Random Fields
 
+Few of the static environmental covariates examined were related to the distribution of either stock. Only the static SST layer, depth, and sediment type (Yellowtail only) had any consistent relationship to the likelihood of encountering either species throughout the duration of this study. The influence of the average SST layer as an environmental covariate in the models was somewhat surprising given this layer was derived from monthly SST composites from the Advanced Very High Resolution Radiometer (AVHRR) satellite from 1997 to 2008 [@greenlawGeodatabaseHistoricalContemporary2010] and thus represents an aggregate, static layer from only a temporal subset of the time period covered by the groundfish survey data. However, the importance of this SST layer may be due to it capturing general widespread oceanographic features across the bank domain. Further, the observed variability of the effect between seasons is likely a reflection of the connection between surface waters and the benthos given that the degree of vertical mixing and stratification varies with season and spatially across the bank [@kavanaughThirtyThreeYearsOcean2017]. It is acknowledged that the interpretation of the static SST layer used in these analyses as a thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and the species reaction to these patterns have remained static over the study period. To understand how the thermal environment is influencing the species distributions on GB, the development of more advanced models that use either dynamic SST or modelled bottom temperature layers would be beneficial [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015]. Variability in OP cannot be inferred from static environmental layers like those used in this analysis, the random fields were the means by which the changes in the species distributions could be tracked.
 
-Yellowtail Flounder was unlikely to be found on bottom types which did not include sand and was more frequently found at depths between `r yt.dep.peak` meters which is consistent with the known life history for this species [@johnsonYellowtailFlounderLimanda1999]. In historically lower SST regions of the bank most of the remaining habitat on GB which meet these criteria straddle the ICJ line on GB. In addition, there was a consistent increased likelihood of encountering Yellowtail Flounder in this area which was not explained by the environmental covariates. This suggests this region has some unexplained ecological or environmental significance to Yellowtail Flounder. The shift in the distribution of Yellowtail Flounder away from more southern and western parts of GB combined with the declines in biomass of Yellowtail Flounder throughout the U.S. supports the view that the environmental change which has been observed throughout U.S. waters has been a factor in the recent decline of Yellowtail Flounder both on GB and throughout the region [@legaultStockAssessmentGeorges2018; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015]. Given the loss of Yellowtail Flounder from the warmer portions of the bank observed in this study it is possible that the remaining core area straddling the ICJ line represents the most northern suitable habitat on GB for this species. If temperatures continue to increase, as projected with climate change, the suitability of this habitat may decline which would increase the risk of extirpation of Yellowtail Flounder from GB irrespective of any fisheries management action [@allynComparingSynthesizingQuantitative2020].
+From a predictive standpoint the random fields were often able to predict the OP without a substantial loss of predictive ability when compared to the more complex models including the static environmental data (e.g. Figure \@ref(fig:folds)). This occurred because the random fields are flexible enough to capture the variability inherent in the data in each era, while the environmental covariate relationships were constrained to be invariant throughout the entire time series. Recent research suggests that using a static random field in conjunction with a spatio-temporal random field may provide less biased and more accurate estimates than models that rely solely on environmental covariates [@yinPrepSpatiotemporalModel2019]. These results also suggest that where environmental data aren't available or are prohibitively expensive to collect, these spatial models on their own have some utility in understanding variability and drivers of species distributions. This information from these models could then be used as a first step to better understand the patterns and processes driving change in the species distributions and subsequently help with the design more efficient data collection programs.
 
-
-## Environmental Covariates and Radndom Fields
-
-The results indicate that few of the static environmental covariates related to groundfish distribution with only a static SST layer, depth, and sediment type having any consistent relationship to the likelihood of encountering either species throughout the duration of this study.
-
-The influence of the average SST layer as an environmental covariate in the models was somewhat surprising given this layer was derived from monthly SST composites from the Advanced Very High Resolution Radiometer (AVHRR) satellite from 1997 to 2008 [@greenlawGeodatabaseHistoricalContemporary2010] and thus represents an aggregate, static layer from only a temporal subset of the time period covered by the groundfish survey data. However, the importance of this SST layer may be due to it capturing general widespread oceanographic features across the bank domain. Further, the observed variability of the effect between seasons is likely a reflection of the connection between surface waters and the benthos given that the degree of vertical mixing and stratification varies with season and spatially across the bank [@kavanaughThirtyThreeYearsOcean2017]. It is acknowledged that the interpretation of the static SST layer used in these analyses as a thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and the species reaction to these patterns have remained static over the study period. Therefore, more advanced models using either dynamic SST or modelled bottom temperature layer could lead to further insights into how changes in the thermal environment have influenced the distribution of both stocks [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015].
-
-The incorporation of dynamic environmental covariates either from remote sensing or oceanographic models would be a logical next step to determine if changes in, for example bottom temperature, have driven the patterns observed for these species.
-
-The distribution of cod has steadily shifted throughout the duration of the study period. The static SST layer and depth were the most influential covariates and indicated that cod preferred the colder portions of the bank throughout the year. While the depth preference of cod is more variable than yellowtail [@fahayAtlanticCodGadus1999; @johnsonYellowtailFlounderLimanda1999], the loss of high EP areas in the more southern and western reaches of the bank have primarily been the reason for the apparent shift in the distribution of cod into Canadian waters. 
-
-More advanced models using either a dynamic SST or modelled bottom temperature layer would lead to further insights into how changes in the thermal environment have influenced the distribution of cod over time [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015]. The interpretation of the static SST layer used in these analyses as thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and the species reaction to these patterns have remained static over the study period.
-
-The depth, static SST, and sediment type were generally the most influential variables for yellowtail for all the models tested. Yellowtail was unlikely to be found on bottom types which did not include sand and was more frequently found at depths between XXX and XXX meters [@johnsonYellowtailFlounderLimanda1999] and in historically lower SST regions of the bank; most of the remaining habitat which meet these criteria are found straddling the border between Canada and the U.S.A and in Canadian waters on GB. The random fields in each season (see supplemental material) also indicated a consistent increased likelihood of encountering yellowtail in the region straddling the Canadian and U.S. border and this suggests there is some unexplained ecological or environmental significance in this region. The shift in the distribution of yellowtail away from more southern and western parts of GB combined with the declines in biomass of yellowtail throughout the U.S. supports the view that the environmental change that has been observed throughout U.S. waters has been a factor in the recent decline of yellowtail both on GB and throughout the region [@legaultStockAssessmentGeorges2018; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015]. Given the loss of Yellowtail from the warmer portions of the bank observed in this study it is possible that the remaining core area around CA II and in Canada represents the most northern suitable habitat on GB for this species. If temperatures continue to increase as projected the suitability of this habitat may decline which would increase the risk of extirpation of yellowtail from GB irrespective of any fisheries management action [@allynComparingSynthesizingQuantitative2020].
-
-The flexibility of the random fields alone (intercept models) indicated that from a predictive standpoint the random fields were often able to predict the OP without a substantial loss of predictive ability when compared to the more complex models including the static environmental data (e.g. Figure \@ref(fig:folds)). This occurred because the random fields are flexible enough to capture the variability inherent in the data in each era, while the environmental covariate relationships were constrained to be invariant throughout the entire time series. Recent research suggests that using a static random field in conjunction with a spatio-temporal random field may provide less biased and more accurate estimates than models that rely on environmental covariates [@yinPrepSpatiotemporalModel2019].
-
-Using spatial only models performs as well as the available static environmental data in terms of prediction for these species. If environmental data aren't available or are expensive to collect, these spatial models on their own seem to have some utility in prediction of species location.
+Finally, it should be noted that the observed shifts in the distributions observed here could be due to environmental change and/or direct anthropogenic factors [e.g. fishing; @boudreauConnectivityPersistenceLoss2017]. The shifts in the distributions in the 1970s and 1980s may indeed have been related to either fishing or environmental factors given the relatively high fishing effort during this period [@andersonHistoryFisheriesManagement1997; @andrushchenkoAssessmentEasternGeorges2018; @legaultStockAssessmentGeorges2018]. However several lines of evidence suggest that fisheries are not inhibiting these stocks from re-establishing themselves in the southern or western portions of GB in more recent years. For example, in the early 2000's there was a large increase in the biomass of Yellowtail Flounder which  quickly lead to a directed fishery for Yellowtail Flounder and was followed by a rapid decline in the biomass of this stock [@legaultStockAssessmentGeorges2018]. During this short lived Yellowtail Flounder renaissance, the area of elevated OP did increase substantially on GB, but it remained centred on the ICJ line and the stock did not re-establish itself in the southern or western regions on GB. Additionally, the lack of a large directed fishery for Atlantic Cod on GB since the early 1990s, along with the addition of two large closures in United States waters [@murawskiLargescaleClosedAreas2000] have not resulted in a shift in the distribution of this stock back into southern or western portions of the bank . Finally, in recent years the bycatch of these two stocks from the two lucrative scallop fisheries on GB has also been in decline [@okeefeEvaluatingEffectivenessTime2014a; @keithEvaluatingSocioeconomicConservation2020] but this has not resulted in an expansion of the distribution of either stock. Given these patterns along with the regional trends observed for other stocks of these species [@bundySealsCodForage2009; @nfsc54thNortheastRegional2012; @NOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015], it seems likely the distributions of both stocks in recent years has been predominately influenced by environmental conditions.
 
 ### Conclusion
 
-These models provide insight into how the distribution of both species changes both seasonally and inter-annually and how simple static environmental covariates generally have minimal ability to predict these patterns. The only static environmental data which had a significant effect on the species distributions were the average sea surface temperature (1997-2008), depth, and bottom type (yellowtail only). The inter-annual shifts in species distribution indicate the increasing importance of Canadian waters for both species on GB which is likely is due to the long-term environmental shifts observed in the region. Given the habitat constraints faced by both species the continuation of directed environmental change will likely put both species at increased risk of extirpation from U.S. portion of Georges Bank and, in the longer term, all of GB irrespective of any fisheries management action. The utilization of the spatio-temporal information contained in these models provides novel insights which can be used to improve science advice (e.g. accounting for shifting distributions in stock assessments or choosing the location of protected areas) and lead to more informed fisheries management decisions.
+These models provide insight into how the distribution of both species changes both seasonally and inter-annually and how simple static environmental covariates generally have minimal ability to predict these patterns. The only static environmental data which had a significant effect on the species distributions were the average sea surface temperature (1997-2008), depth, and bottom type (Yellowtail only). The inter-annual shifts in species distribution indicate the increasing importance of Canadian waters for both stocks on GB; these shifts are likely is due to the long-term environmental shifts observed in the region. Given the habitat constraints faced by both species the continuation of directed environmental change will likely put both species at increased risk of extirpation from U.S. portion of Georges Bank and, in the longer term, all of GB irrespective of any fisheries management action. The utilization of the spatio-temporal information contained in these models provides novel insights which can be used to improve science advice (e.g. accounting for shifting distributions in stock assessments or in the use and development of protected areas) and lead to more informed fisheries management decisions.
 
 # ACKNOWLEDGEMENTS
 
-Thanks to Yanjun Wang, Dheeraj Busawon, Monica Finley, Phil Politis, and Nancy Shackell for help with data, questions, and the development and exploration of various parts of this project. Thanks to the CSASdown team for the development of the tools used to craft this manuscript. Thanks to Trish Pearo Drew, Jamie Raper, and Brittany Wilson for general support. Finally, thanks to Dan Ricard and Joanna Mills Flemming for their helpful reviews. This project was made possible by funding from DFOs Strategic Program for Ecosystem-based Research and Advice (SPERA).
+Thanks to Christine Ward-Paige, Yanjun Wang, Dheeraj Busawon, Monica Finley, Phil Politis, and Nancy Shackell for help with data, questions, and the development and exploration of various parts of this project. Thanks to Trish Pearo Drew, Jamie Raper, and Brittany Wilson for general support. Finally, thanks to Dan Ricard and Joanna Mills Flemming for their feedback on a previous version of this manuscript. This project was made possible by funding from DFOs Strategic Program for Ecosystem-based Research and Advice (SPERA).
 
 <!--- Old stuff --->
 
